# investment-app

./: .coverage  .gitignore  Makefile  pyproject.toml  requirements.txt
.github/workflows/: testing-ci.yml
src/: Calculation.py  DBcm.py  app.py
static/: main.css
templates/: base.html  calclog.html  calculations.html  result.html
